--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 
                 <div class="annotations layer">
                   <div id="falcon9-v11-dragon1-trunk-annotation" class="annotation right" style="margin-top: 230px;">
-                    <span class="text"> <h1>Crew Dragon Trunk</h1> <span>Contains unpressurized cargo and solar panels</span></span>
+                    <span class="text"> <h1>Crew Dragon Trunk</h1> <span>Contains unpressurized cargo and integrated solar panels</span></span>
                   </div>
                 </div>
 
