--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="style/main.css" />
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/payload.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   </head>
   <body>
     <header>
